--- a/app/src/main/res/layout/activity_activity_descr_event.xml
+++ b/app/src/main/res/layout/activity_activity_descr_event.xml
@@ -11,8 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/textViewDescr"
-        android:id="@+id/textView"
+        android:id="@+id/textViewDescr"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true" />
 
